<resources>
    <string name="app_name">BCI</string>
    <string name="action_settings">Ajustes</string>
    <string name="connect">Conectar</string>
    <string name="status">Estado de la Conexión</string>
    <string name="disconnect">Desconectar</string>
    <string name="refresh">Actualizar</string>
    <string name="init_val">0.0</string>
    <string name="eeg">Lectura EEG</string>
    <string name="accel">Datos del Acelerómetro</string>
    <string name="version">Versión</string>
    <string name="undefined">Desconocida</string>
    <string name="artifacts">Blinks, Jaw: </string>
    <string name="msg_count">Msg number, size: </string>
    <string name="pause">Pausar/Reanudar</string>
    <string name="drop">Drop</string>
    <string name="muse_elem">Alpha Relativo</string>

    <string name="permission_dialog_title">Muse Necesita de tus permisos</string>
    <string name="permission_dialog_description">Muse necesita algunos permisos para trabajar correctamente. En las siguientes pantallas, acepte para continuar. Si usted deniega los permisos, Muse no trabajará correctamente hasta que usted vayaa los ajustes de la aplicación y los autiroce</string>
    <string name="permission_dialog_understand">Entendido</string>
    <string name="dispositivos">Dispositivos</string>

    <string name="about">Dana BCI &#174;\n2019</string>
</resources>
