<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/Ll_Principal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="10sp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="200sp"
                android:layout_height="50sp"
                android:src="@drawable/other_1"
                android:contentDescription="@string/undefined"
                android:tint="@color/colorPrimaryDark"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:layout_marginStart="15sp"
                android:layout_marginEnd="15sp"
                android:text="@string/dispositivos"
                android:textColor="@color/colorBlanco"
                android:textStyle="bold"
                android:textSize="19sp" />

        </RelativeLayout>

        <Spinner
            android:id="@+id/muses_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15sp"
            android:layout_marginStart="15sp"
            android:layout_marginEnd="15sp"
            android:paddingBottom="15sp"/>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:rowCount="4"
            android:columnCount="2"
            android:orientation="vertical"
            android:layout_marginStart="15sp"
            android:layout_marginEnd="15sp">

            <TextView
                android:text="@string/status"
                android:textColor="@color/colorAccent"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/con_status"
                android:text="@string/undefined"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:textAlignment="center"
                android:paddingBottom="10sp"/>

            <Button
                android:id="@+id/connect"
                android:text="@string/connect"
                android:layout_columnWeight="1"
                android:layout_marginTop="5sp"
                android:layout_marginStart="15sp"
                android:background="@drawable/all_corners_round"
                android:textColor="@color/colorBlanco" />

            <Button
                android:id="@+id/disconnect"
                android:text="@string/disconnect"
                android:layout_columnWeight="1"
                android:layout_marginTop="10sp"
                android:layout_marginStart="15sp"
                android:background="@drawable/all_corners_round"
                android:textColor="@color/colorBlanco" />

            <ImageView
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_rowSpan="4"
                android:layout_marginEnd="15sp"
                android:src="@mipmap/muse_headband"
                android:contentDescription="@string/app_name"
                android:scaleType="centerInside"/>

        </GridLayout>
        
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp">

            <ImageView
                android:id="@+id/display_1"
                android:layout_width="match_parent"
                android:layout_height="60sp"
                android:src="@drawable/other_3"
                android:contentDescription="@string/undefined"
                android:paddingTop="10sp"
                android:paddingBottom="10sp"
                android:layout_marginStart="15sp"
                android:tint="@color/colorPrimaryDark"/>

            <TextView
                android:id="@+id/Jbl_EEGdata"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/display_1"
                android:layout_alignBottom="@id/display_1"
                android:layout_marginStart="25sp"
                android:layout_marginEnd="10sp"
                android:gravity="center_vertical"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/colorBlanco"
                android:textAllCaps="true"
                android:text="@string/eeg" />
            
        </RelativeLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:rowCount="2"
            android:layout_marginBottom="20sp"
            android:layout_marginStart="25sp"
            android:layout_marginEnd="25sp" >

            <TextView
                android:id="@+id/eeg_tp9"
                android:text="@string/init_val"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_margin="10sp"
                android:textColor="@color/colorAccent"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/eeg_af7"
                android:text="@string/init_val"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_margin="10sp"
                android:textColor="@color/colorAccent"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/eeg_af8"
                android:text="@string/init_val"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_margin="10sp"
                android:textColor="@color/colorAccent"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/eeg_tp10"
                android:text="@string/init_val"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_margin="10sp"
                android:textColor="@color/colorAccent"
                android:textAlignment="center" />

        </GridLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/display_2"
                android:layout_width="100sp"
                android:layout_height="60sp"
                android:src="@drawable/other_2"
                android:contentDescription="@string/undefined"
                android:paddingTop="10sp"
                android:paddingBottom="10sp"
                android:layout_alignParentStart="true"
                android:layout_alignEnd="@id/Jbl_AcelerometroData"
                android:tint="@color/colorPrimaryDark"/>

            <TextView
                android:id="@+id/Jbl_AcelerometroData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/display_2"
                android:layout_alignBottom="@id/display_2"
                android:layout_marginStart="25sp"
                android:layout_marginEnd="10sp"
                android:paddingEnd="15sp"
                android:paddingStart="0dp"
                android:gravity="center_vertical"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/colorBlanco"
                android:textAllCaps="true"
                android:text="@string/accel" />

        </RelativeLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="3"
            android:rowCount="1"
            android:layout_marginBottom="20sp">

            <TextView
                android:id="@+id/acc_x"
                android:text="@string/init_val"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_margin="10sp"
                android:textColor="@color/colorAccent"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/acc_y"
                android:text="@string/init_val"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_margin="10sp"
                android:textColor="@color/colorAccent"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/acc_z"
                android:text="@string/init_val"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_margin="10sp"
                android:textColor="@color/colorAccent"
                android:textAlignment="center" />

        </GridLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp">

            <ImageView
                android:id="@+id/display_3"
                android:layout_width="match_parent"
                android:layout_height="60sp"
                android:src="@drawable/other_3"
                android:contentDescription="@string/undefined"
                android:paddingTop="10sp"
                android:paddingBottom="10sp"
                android:layout_marginStart="15sp"
                android:tint="@color/colorPrimaryDark"/>

            <TextView
                android:id="@+id/Jbl_AlphaData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/display_3"
                android:layout_alignBottom="@id/display_3"
                android:layout_marginStart="25sp"
                android:layout_marginEnd="10sp"
                android:gravity="center_vertical"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/colorBlanco"
                android:textAllCaps="true"
                android:text="@string/muse_elem" />

        </RelativeLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:rowCount="2"
            android:layout_marginBottom="20sp">

            <TextView
                android:id="@+id/elem1"
                android:text="@string/init_val"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_margin="10sp"
                android:textColor="@color/colorAccent"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/elem2"
                android:text="@string/init_val"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_margin="10sp"
                android:textColor="@color/colorAccent"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/elem3"
                android:text="@string/init_val"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_margin="10sp"
                android:textColor="@color/colorAccent"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/elem4"
                android:text="@string/init_val"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_margin="10sp"
                android:textColor="@color/colorAccent"
                android:textAlignment="center" />

        </GridLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/display_4"
                android:layout_width="100sp"
                android:layout_height="60sp"
                android:src="@drawable/other_2"
                android:contentDescription="@string/undefined"
                android:paddingTop="10sp"
                android:paddingBottom="10sp"
                android:layout_alignParentStart="true"
                android:layout_alignEnd="@id/Jbl_Version"
                android:tint="@color/colorPrimaryDark"/>

            <TextView
                android:id="@+id/Jbl_Version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/display_4"
                android:layout_alignBottom="@id/display_4"
                android:layout_marginStart="25sp"
                android:layout_marginEnd="10sp"
                android:paddingEnd="15sp"
                android:paddingStart="0dp"
                android:gravity="center_vertical"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/colorBlanco"
                android:textAllCaps="true"
                android:text="@string/version" />

        </RelativeLayout>

        <TextView
            android:id="@+id/version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="25sp"
            android:textColor="#000"
            android:textAlignment="center"
            android:text="@string/undefined" />

        <Button
            android:id="@+id/pause"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@drawable/all_corners_round"
            android:backgroundTint="@color/colorPrimaryDark"
            android:textColor="#FFF"
            android:layout_gravity="center"
            android:text="@string/pause" />

    </LinearLayout>

</ScrollView>